WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
14247
Display problem with Flash/Java
https://bugs.webkit.org/show_bug.cgi?id=14247
Summary
Display problem with Flash/Java
Cameo Wood
Reported
2007-06-20 15:36:10 PDT
Summary: When I load this page, the flash image on the upper left cycles through randomised images, and never stops. The buttons that are supposed to control the images to the left of the cycling image do not work, and do not control the flash image to the left. Steps to Reproduce: Running XP SP2, with Safari 3.0.1, WebKit
r23553
, simply open the page:
http://tale-of-tales.com/TheEndlessForest/register/index.html
Expected Results: In FireFox and IE, the page loads and the flash animation in the upper left loads and shows one randomised image, and only creates a new image when you click the "Randomized Pictogram" button to the right. Actual Results: When the page first loads, the flash animation on the upper left rapidly cycles through randomised pictograms, and the buttons on the left have no effect upon the flash animation. Regression: Works in IE/FF/Opera Notes: Not sure what's causing this- Perhaps the javascript isn't communicating correctly to the flash in a way that Safari/WebKit understands?
Attachments
Add attachment
proposed patch, testcase, etc.
Mark Rowe (bdash)
Comment 1
2007-06-20 15:45:16 PDT
CC'ing Anders as he Knows Things about the Windows plugin support.
Matt Lilek
Comment 2
2007-06-20 15:54:45 PDT
Confirmed with
r23553
and Safari 3.0.1 Beta on Windows XP. This doesn't happen on OS X.
Adam Roben (:aroben)
Comment 3
2007-08-19 22:44:41 PDT
<
rdar://problem/5421997
>
Anders Carlsson
Comment 4
2007-09-17 11:12:05 PDT
Committed revision 25594.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug