WebCore:

Reviewed by Adam.

        <rdar://problem/5421997>
        http://bugs.webkit.org/show_bug.cgi?id=14247
        Display problem with Flash - image does not stop changing

        Port the manual load code over from the Mac version.

        * plugins/win/PluginDatabaseWin.cpp:
        (WebCore::PluginDatabaseWin::createPluginView):
        * plugins/win/PluginDatabaseWin.h:
        Add load manually parameter.

        * plugins/win/PluginStreamWin.cpp:
        (WebCore::PluginStreamWin::stop):
        If we're loading manually, cancel the main resource load.

        (WebCore::PluginStreamWin::destroyStream):
        Don't disconnect the stream if we're loading manually.

        * plugins/win/PluginViewWin.cpp:
        (WebCore::PluginViewWin::setFrameGeometry):
        Always call updateWindow()

        (WebCore::PluginViewWin::PluginViewWin):
        Initialize loadManually.

        (WebCore::PluginViewWin::init):
        Don't set the width and height of the window here since it will make the plug-in HWND show briefly
        before it's been positioned.

        (WebCore::PluginViewWin::didReceiveResponse):
        Create the manual stream.

        (WebCore::PluginViewWin::didReceiveData):
        (WebCore::PluginViewWin::didFinishLoading):
        (WebCore::PluginViewWin::didFail):
        Call through to the manual stream.

        * plugins/win/PluginViewWin.h:

win:

        Reviewed by Adam.

        <rdar://problem/5421997>
        http://bugs.webkit.org/show_bug.cgi?id=14247
        Display problem with Flash - image does not stop changing

        Port the manual load code over from the Mac version.

        * WebFrame.cpp:
        (WebFrame::WebFramePrivate::WebFramePrivate):
        Initialize the plugin pointer.

        (WebFrame::finishedLoading):
        (WebFrame::setMainDocumentError):
        (WebFrame::committedLoad):
        Feed the data to the plug-in.

        (WebFrame::redirectDataToPlugin):
        Store the plug-in widget.



Canonical link: https://commits.webkit.org/20057@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@25594 268f45cc-cd09-0410-ab3c-d52691b4dbfc