WebCore/plugins/win/PluginStreamWin.h
@@ -56,7 +56,9 @@ namespace WebCore {
         void stop();
 
         void startStream();
-        
+
+        void setLoadManually(bool loadManually) { m_loadManually = loadManually; }
+
         // SubresourceLoaderClient
         virtual void didReceiveResponse(SubresourceLoader*, const ResourceResponse&);
         virtual void didReceiveData(SubresourceLoader*, const char*, int);
@@ -81,6 +83,7 @@ namespace WebCore {
         void* m_notifyData;
         bool m_sendNotification;
         PluginStreamState m_streamState;
+        bool m_loadManually;
 
         Timer<PluginStreamWin> m_delayDeliveryTimer;
         void delayDeliveryTimerFired(Timer<PluginStreamWin>*);
